WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157551
TypedArray.prototype.slice should not use the bytelength of passed array for memmove
https://bugs.webkit.org/show_bug.cgi?id=157551
Summary
TypedArray.prototype.slice should not use the bytelength of passed array for ...
Keith Miller
Reported
2016-05-10 18:27:28 PDT
TypedArray.prototype.slice should use the bytelength of passed array for memmove
Attachments
Patch
(2.67 KB, patch)
2016-05-10 18:30 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2016-05-10 18:30:30 PDT
Created
attachment 278567
[details]
Patch
Michael Saboff
Comment 2
2016-05-10 18:33:50 PDT
Comment on
attachment 278567
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2016-05-10 19:03:31 PDT
Comment on
attachment 278567
[details]
Patch Clearing flags on attachment: 278567 Committed
r200667
: <
http://trac.webkit.org/changeset/200667
>
WebKit Commit Bot
Comment 4
2016-05-10 19:03:35 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 5
2016-05-10 19:11:49 PDT
The title of this bug seems to describe the opposite of what the patch changed.
Keith Miller
Comment 6
2016-05-11 16:17:47 PDT
(In reply to
comment #5
)
> The title of this bug seems to describe the opposite of what the patch > changed.
Your right. There should be a negation in the title. I will fix the ChangeLog to say: "TypedArray.prototype.slice should not use the byteLength of the passed array for memmove"
Keith Miller
Comment 7
2016-05-11 16:26:54 PDT
rdar://problem/26179914
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug