TypedArray.prototype.slice should use the byteLength of passed array for memmove https://bugs.webkit.org/show_bug.cgi?id=157551 <rdar://problem/26179914>

Reviewed by Michael Saboff.

The TypedArray.prototype.slice function would use the byteLength of the passed array
to determine the amount of data to copy. It should have been using the passed length
times the size of each element. This fixes a crash on JavaPoly.com

* runtime/JSGenericTypedArrayViewInlines.h:
(JSC::JSGenericTypedArrayView<Adaptor>::set):
* tests/stress/typedarray-slice.js:


Canonical link: https://commits.webkit.org/175693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200667 268f45cc-cd09-0410-ab3c-d52691b4dbfc